--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  font-size: 1.2em;
   background-color: #242444b4;
 }
 
@@ -36,6 +37,7 @@ body {
   border: 0;
   padding: 10px;
   margin-top: 10px;
+  font-size: 0.9em;
 }
 
 textarea {
@@ -46,6 +48,7 @@ textarea {
   padding: 10px;
   border: 0;
   margin-top: 10px;
+  font-size: 0.9em;
 }
 
 .hint {
@@ -53,7 +56,7 @@ textarea {
 }
 
 #submit {
-  width: 95%;
+  width: 98%;
   height: 40px;
   background-color: #37af65;
   color: white;
@@ -61,9 +64,24 @@ textarea {
   border: 0;
   display: block;
   margin: auto;
+  font-size: 1em;
 }
 
 #recommend-definitely,
 #improvement-front-end {
   margin-top: 10px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  transform: scale(1.5);
+}
+
+input[name="improvements"],
+input[name="recommend"] {
+  margin: 10px;
+}
+
+label {
+  vertical-align: middle;
 }
